Implement periodic update feature
- print out seeded versions in report
- periodically check in a background out of band process if the embed
  wheels are out of date
- promote app data at root level, with three implementations - via disk
  folder, via temp folder and via not available
- introduce a common wheelhouse to not replicate wheels accross python
  versions, decreasing size of the app data folder
- allow manually upgrading the embeded wheels by using the
  --upgrade-embed-wheels flag, in this case no virtual environment is
  created
- upgrade setuptools to 47.1.0

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,6 @@ install_requires =
     distlib>=0.3.0,<1
     filelock>=3.0.0,<4
     six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
-    contextlib2>=0.6.0,<1;python_version<"3.3"
     importlib-metadata>=0.12,<2;python_version<"3.8"
     importlib-resources>=1.0;python_version<"3.7"
     pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
@@ -79,7 +78,7 @@ virtualenv.discovery =
     builtin = virtualenv.discovery.builtin:Builtin
 virtualenv.seed =
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
-    app-data = virtualenv.seed.via_app_data.via_app_data:FromAppData
+    app-data = virtualenv.seed.embed.via_app_data.via_app_data:FromAppData
 
 [options.extras_require]
 docs =
@@ -108,7 +107,7 @@ virtualenv.activation.cshell = *.csh
 virtualenv.activation.fish = *.fish
 virtualenv.activation.powershell = *.ps1
 virtualenv.activation.xonsh = *.xsh
-virtualenv.seed.embed.wheels = *.whl
+virtualenv.seed.wheels.embed = *.whl
 
 [options.packages.find]
 where = src
