--- a/setup.cfg
+++ b/setup.cfg
@@ -97,7 +97,8 @@ testing =
     pytest-mock >= 2
     pytest-env >= 0.6.2
     pytest-randomly >= 1
-    pytest-timeout
+    pytest-timeout >= 1
+    flaky >= 3
     xonsh >= 0.9.16; python_version > '3.4'
 
 [options.package_data]
