--- a/tox.ini
+++ b/tox.ini
@@ -116,7 +116,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,distlib,docutils,filelock,git,packaging,pytest,setuptools,six,sphinx,sphinx_rtd_theme,sphinxarg
+known_third_party = _subprocess,appdirs,coverage,distlib,docutils,filelock,flaky,git,packaging,pytest,setuptools,six,sphinx,sphinx_rtd_theme,sphinxarg
 
 [flake8]
 max-complexity = 22
