--- a/tox.ini
+++ b/tox.ini
@@ -31,14 +31,15 @@ passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 commands =
-    coverage erase
-    coverage run -m pytest \
+    python -m coverage erase
+    python -m coverage run -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
     tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:auto}}
 
-    coverage combine
-    coverage report
-    coverage html -d {envtmpdir}/htmlcov
+    python -m coverage combine
+    python -m coverage report
+    python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
+    python -m coverage html -d {envtmpdir}/htmlcov
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
@@ -57,7 +58,7 @@ commands =
     python -m coverage report --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.xml
     python -m coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+    python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
 depends =
     py38,
     py37,
