--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,13 +38,9 @@ jobs:
     steps:
     - name: install OS dependencies
       run:   |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-             sudo apt-get update -y && sudo apt-get install fish csh
-        elif [ "$RUNNER_OS" == "Windows" ]; then
-             choco install vcpython27 --yes -f
-        elif [ "$RUNNER_OS" == "macOS" ]; then
-             brew update -vvv && brew install fish tcsh
-        fi
+        ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh' || true}}
+        ${{ runner.os == 'macOS' && 'brew update -vvv && brew install fish tcsh' || true}}
+        ${{ runner.os == 'Windows' && ( matrix.py == '2.7' || matrix.py == 'pypy2' ) && 'choco install vcpython27 --yes -f' || true }}
       shell: bash
     - name: setup python for tox
       uses: actions/setup-python@v2
@@ -53,7 +49,7 @@ jobs:
     - name: install tox
       run: python -m pip install tox
     - uses: actions/checkout@v2
-    - name: pick to environment to run
+    - name: pick environment to run
       run: |
         print(
             '::set-env name=TOXENV::' +
@@ -71,6 +67,17 @@ jobs:
       env:
         PYTEST_ADDOPTS: "-vv --durations=20"
         CI_RUN: 'yes'
+        DIFF_AGAINST: HEAD
+    - name: rename coverage report file
+      run: |
+        import os; os.rename('.tox/coverage.{}.xml'.format(os.environ['TOXENV']), '.tox/coverage.xml')
+      shell: python
+    - uses: codecov/codecov-action@v1
+      with:
+        file: ./.tox/coverage.xml
+        flags: tests
+        env_vars: OS,PYTHON
+        name: ${{ matrix.py }} - ${{ matrix.os }}
 
   check:
     name: check ${{ matrix.tox_env }} - ${{ matrix.os }}
