--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -19,7 +18,7 @@ jobs:
     - uses: pre-commit/action@v1.1.0
 
   test:
-    name: ${{ matrix.os }} - ${{ matrix.py }}
+    name: test ${{ matrix.py }} - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
       fail-fast: false
@@ -32,44 +31,61 @@ jobs:
         - 3.8
         - 3.7
         - 3.6
+        - 3.5
+        - pypy3
         - 2.7
         - pypy2
-        - pypy3
-
     steps:
-    - uses: actions/checkout@v2
-    - uses: tox-dev/action@v1.0.0
-      with:
-        python-version: ${{ matrix.py }}
-
+    - name: install OS dependencies
+      run:   |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+             sudo apt-get update -y && sudo apt-get install fish csh
+        elif [ "$RUNNER_OS" == "Windows" ]; then
+             choco install vcpython27 --yes -f
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+             brew update -vvv && brew install fish tcsh
+        fi
+      shell: bash
     - name: setup python for tox
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - name: install tox
       run: python -m pip install tox
+    - uses: actions/checkout@v2
+    - name: pick to environment to run
+      run: |
+        python -c "print('::set-env name=TOXENV::' + {'3.8': 'py38', '3.7': 'py37', '3.6': 'py36', '3.5': 'py35', '2.7': 'py27', 'pypy2': 'pypy', 'pypy3': 'pypy3'}['${{ matrix.py}}'])"
     - name: setup python for test ${{ matrix.py }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
-    - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
-      run: tox -vve py --notest
-    - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
-      run: tox -e py
+    - name: setup test suite
+      run: tox -vv --notest
+    - name: run test suite
+      run: tox
+      env:
+        PYTEST_ADDOPTS: "-vv --durations=20"
+        CI_RUN: 'yes'
 
   check:
-    name: check ${{ matrix.tox_env }}
-    runs-on: Ubuntu-latest
+    name: check ${{ matrix.tox_env }} - ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
     strategy:
       fail-fast: false
       matrix:
+        os:
+        - Ubuntu
+        - Windows
         tox_env:
+        - dev
+        - docs
         - readme
         - upgrade
-        - dev
         - zipapp
-        - docs
-
+        exclude:
+        - {os: Windows, tox_env: readme}
+        - {os: Windows, tox_env: docs}
     steps:
     - uses: actions/checkout@v2
     - name: setup Python 3.8
@@ -80,3 +96,5 @@ jobs:
       run: python -m pip install tox
     - name: run check for ${{ matrix.tox_env }}
       run: python -m tox -e ${{ matrix.tox_env }}
+      env:
+        UPGRADE_ADVISORY: 'yes'
