--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,6 +35,9 @@ jobs:
         - pypy3
         - 2.7
         - pypy2
+        include:
+        - {os: MacOs, py: brew@py3}
+        - {os: MacOs, py: brew@py2}
     steps:
     - name: install OS dependencies
       run:   |
@@ -49,17 +52,27 @@ jobs:
     - name: install tox
       run: python -m pip install tox
     - uses: actions/checkout@v2
-    - name: pick environment to run
-      run: |
-        print(
-            '::set-env name=TOXENV::' +
-            {'3.8': 'py38', '3.7': 'py37', '3.6': 'py36', '3.5': 'py35', '2.7': 'py27', 'pypy2': 'pypy', 'pypy3': 'pypy3'}['${{ matrix.py }}']
-        )
-      shell: python
+    - name: use local virtualenv for tox
+      run: python -m pip install ${{ runner.os == 'Windows' && matrix.py == 'pypy3' && 'virtualenv<20' || '.'}}
     - name: setup python for test ${{ matrix.py }}
+      if: "!startsWith(matrix.py,'brew@py')"
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
+    - name: load python from ${{ matrix.py }}
+      if: startsWith(matrix.py,'brew@py')
+      run: |
+        import os; import subprocess
+        version = "${{matrix.py}}"[-1]
+        subprocess.check_call(["brew", "install", f"python@{version}"])
+        print('::set-env name=PATH::' + (":".join([f"/usr/local/opt/python@{version}"] + os.environ["PATH"].split(":"))))
+      shell: python
+    - name: pick environment to run
+      run: |
+        import subprocess; import json
+        major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
+        print('::set-env name=TOXENV::' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")))
+      shell: python
     - name: setup test suite
       run: tox -vv --notest
     - name: run test suite
@@ -76,7 +89,6 @@ jobs:
       with:
         file: ./.tox/coverage.xml
         flags: tests
-        env_vars: OS,PYTHON
         name: ${{ matrix.py }} - ${{ matrix.os }}
 
   check:
