--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,6 +38,7 @@ jobs:
         include:
         - {os: MacOs, py: brew@py3}
         - {os: MacOs, py: brew@py2}
+        - {os: Ubuntu, py: 3.9-dev}
     steps:
     - name: install OS dependencies
       run:   |
@@ -55,17 +56,22 @@ jobs:
     - name: use local virtualenv for tox
       run: python -m pip install .
     - name: setup python for test ${{ matrix.py }}
-      if: "!startsWith(matrix.py,'brew@py')"
+      if: "!( startsWith(matrix.py,'brew@py') || endsWith(matrix.py, '-dev') )"
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
-    - name: load python from ${{ matrix.py }}
+    - name: setup DEV python for test ${{ matrix.py }}
+      uses: deadsnakes/action@v1.0.0
+      if: endsWith(matrix.py, '-dev')
+      with:
+        python-version: ${{ matrix.py }}
+    - name: setup brew python for test ${{ matrix.py }}
       if: startsWith(matrix.py,'brew@py')
       run: |
         import os; import subprocess
         version = "${{matrix.py}}"[-1]
         subprocess.check_call(["brew", "install", f"python@{version}"])
-        print(f'::add-path::/usr/local/opt/python@{version}')
+        print(f"::add-path::/usr/local/opt/python@{version}")
       shell: python
     - name: pick environment to run
       run: |
