--- a/codecov.yaml
+++ b/codecov.yaml
@@ -7,6 +7,9 @@ coverage:
       project:
         default:
           target: '80'
+  notify:
+    after_n_builds: 24
+    wait_for_ci: yes
 
 comment:
   layout: "diff, files"
