--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
     tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:auto}}
 
     python -m coverage combine
-    python -m coverage report
+    python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
     python -m coverage html -d {envtmpdir}/htmlcov
 
@@ -55,7 +55,7 @@ setenv =
     COVERAGE_FILE={toxworkdir}/.coverage
 commands =
     python -m coverage combine
-    python -m coverage report --show-missing
+    python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.xml
     python -m coverage html -d {toxworkdir}/htmlcov
     python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
