disable xonsh on python3.9
https://github.com/xonsh/xonsh/issues/3618

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ virtualenv.activate =
     batch = virtualenv.activation.batch:BatchActivator
     fish = virtualenv.activation.fish:FishActivator
     powershell = virtualenv.activation.powershell:PowerShellActivator
-    python = virtualenv.activation.python:PythonActivator
+    python = virtualenv.activation.python:PestythonActivator
     xonsh = virtualenv.activation.xonsh:XonshActivator
 virtualenv.create =
     venv = virtualenv.create.via_global_ref.venv:Venv
@@ -99,7 +99,7 @@ testing =
     pytest-randomly >= 1
     pytest-timeout >= 1
     flaky >= 3
-    xonsh >= 0.9.16; python_version > '3.4'
+    xonsh >= 0.9.16; python_version > '3.4' and python_version != '3.9'
 
 [options.package_data]
 virtualenv.activation.bash = *.sh
