Fix typo in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ virtualenv.activate =
     batch = virtualenv.activation.batch:BatchActivator
     fish = virtualenv.activation.fish:FishActivator
     powershell = virtualenv.activation.powershell:PowerShellActivator
-    python = virtualenv.activation.python:PestythonActivator
+    python = virtualenv.activation.python:PythonActivator
     xonsh = virtualenv.activation.xonsh:XonshActivator
 virtualenv.create =
     venv = virtualenv.create.via_global_ref.venv:Venv
