--- a/setup.cfg
+++ b/setup.cfg
@@ -97,6 +97,7 @@ testing =
     pytest-env >= 0.6.2
     pytest-randomly >= 1
     pytest-timeout >= 1
+    pytest-freezegun >= 0.4.1
     flaky >= 3
     xonsh >= 0.9.16; python_version > '3.4' and python_version != '3.9'
 
