--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     PYTHONIOENCODING=utf-8
-    {py34,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    {py34,py27,pypy, upgrade}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
     {pypy,py27}: PYTEST_XDIST = 0
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
@@ -37,7 +37,7 @@ commands =
     tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:auto}}
 
     python -m coverage combine
-    python -m coverage report
+    python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
     python -m coverage html -d {envtmpdir}/htmlcov
 
@@ -55,7 +55,7 @@ setenv =
     COVERAGE_FILE={toxworkdir}/.coverage
 commands =
     python -m coverage combine
-    python -m coverage report --show-missing
+    python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.xml
     python -m coverage html -d {toxworkdir}/htmlcov
     python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
