--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,6 +2,8 @@ name: check
 on:
   push:
   pull_request:
+  schedule:
+  - cron:  '0 8 * * *'
 
 jobs:
   lint:
@@ -127,3 +129,23 @@ jobs:
       run: python -m tox -e ${{ matrix.tox_env }}
       env:
         UPGRADE_ADVISORY: 'yes'
+
+  publish:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [check, test, lint]
+    runs-on: ubuntu-latest
+    steps:
+    - name: setup python to build package
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: install pep517
+      run: python -m pip install pep517
+    - name: build package
+      run: python -m pep517.build -s -b . -o dist
+    - name: publish to PyPi
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        skip_existing: true
+        user: __token__
+        password: ${{ secrets.pypi_password }}
