--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -141,6 +141,7 @@ jobs:
         python-version: 3.8
     - name: install pep517
       run: python -m pip install pep517
+    - uses: actions/checkout@v2
     - name: build package
       run: python -m pep517.build -s -b . -o dist
     - name: publish to PyPi
