--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,23 @@
 [tox]
 minversion = 3.14.0
 envlist =
-    fix_lint,
-    py38,
-    py37,
-    py36,
-    py35,
-    py34,
-    py27,
-    pypy,
-    pypy3,
-    coverage,
-    readme,
-    docs,
+    fix_lint
+    py38
+    py37
+    py36
+    py35
+    py34
+    py27
+    pypy
+    pypy3
+    coverage
+    readme
+    docs
 isolated_build = true
 skip_missing_interpreters = true
 
 [testenv]
 description = run tests with {basepython}
-deps =
-    pip >= 20.0.2
 setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
@@ -34,7 +32,7 @@ commands =
     python -m coverage erase
     python -m coverage run -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:auto}}
+    {posargs:tests --int --timeout 600 -n {env:PYTEST_XDIST:auto}}
 
     python -m coverage combine
     python -m coverage report --skip-covered --show-missing
@@ -45,9 +43,8 @@ commands =
 description = [run locally after tests]: combine coverage data and create report;
               generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
 deps =
-    {[testenv]deps}
-    coverage >= 5.0.1, <6
-    diff_cover
+    coverage >= 5.0.1
+    diff_cover >= 3
 extras =
 skip_install = True
 passenv = DIFF_AGAINST
@@ -60,14 +57,14 @@ commands =
     python -m coverage html -d {toxworkdir}/htmlcov
     python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
 depends =
-    py38,
-    py37,
-    py36,
-    py35,
-    py34,
-    py27,
-    pypy,
-    pypy3,
+    py38
+    py37
+    py36
+    py35
+    py34
+    py27
+    pypy
+    pypy3
 parallel_show_output = True
 
 [testenv:docs]
@@ -82,13 +79,13 @@ commands =
 [testenv:readme]
 description = check that the long description is valid (need for PyPI)
 deps =
-    {[testenv]deps}
     twine >= 1.12.1
+    pep517 >= 0.8.2
 skip_install = true
 extras =
 commands =
-    pip wheel -w {envtmpdir}/build --no-deps .
-    twine check {envtmpdir}/build/*
+    python -m pep517.build -o {envtmpdir} -b -s .
+    twine check {envtmpdir}/*
 
 [testenv:upgrade]
 description = upgrade pip/wheels/setuptools to latest
@@ -103,8 +100,8 @@ commands = python upgrade_wheels.py
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 basepython = python3.8
 passenv = *
-deps = {[testenv]deps}
-       pre-commit >= 2.0.0, <3
+deps =
+    pre-commit >= 2
 skip_install = True
 commands =
     pre-commit run --all-files --show-diff-on-failure
@@ -131,8 +128,7 @@ description = do a release, required posarg of the version number
 basepython = python3.8
 passenv = *
 deps =
-    {[testenv]deps}
-    gitpython >= 3.0.0, < 4
+    gitpython >= 3
     towncrier >= 19.9.0rc1
     packaging  >= 17.1
 changedir = {toxinidir}/tasks
@@ -144,7 +140,6 @@ description = generate a DEV environment
 extras = testing, docs
 usedevelop = True
 deps =
-    {[testenv]deps}
     {[testenv:release]deps}
     setuptools_scm[toml]>=3.4
 commands =
@@ -155,7 +150,6 @@ commands =
 description = generate a zipapp
 skip_install = true
 deps =
-    {[testenv]deps}
-    packaging >= 20.0.0
+    packaging >= 20
 commands =
     python tasks/make_zipapp.py
