--- a/setup.cfg
+++ b/setup.cfg
@@ -123,7 +123,7 @@ universal = true
 markers =
     slow
 junit_family = xunit2
-addopts = --tb=auto -ra --showlocals
+addopts = --tb=auto -ra --showlocals --no-success-flaky-report
 env =
     PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
     PYTHONIOENCODING=utf-8
