--- a/tox.ini
+++ b/tox.ini
@@ -108,12 +108,9 @@ commands =
     python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
 [isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
+profile = black
 line_length = 120
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,distlib,docutils,filelock,flaky,git,packaging,pytest,setuptools,six,sphinx,sphinx_rtd_theme,sphinxarg
 
 [flake8]
 max-complexity = 22
