--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
 
 [testenv:coverage]
 description = [run locally after tests]: combine coverage data and create report;
-              generates a diff coverage against origin/master (can be changed by setting DIFF_AGAINST env var)
+              generates a diff coverage against origin/main (can be changed by setting DIFF_AGAINST env var)
 deps =
     coverage >= 5.0.1
     diff_cover >= 3
@@ -55,7 +55,7 @@ commands =
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.xml
     python -m coverage html -d {toxworkdir}/htmlcov
-    python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+    python -m diff_cover.diff_cover_tool --compare-branch {env:DIFF_AGAINST:origin/main} {toxworkdir}/coverage.xml
 depends =
     py38
     py37
