--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -39,7 +39,7 @@ jobs:
         - pypy2
         include:
         - {os: MacOs, py: brew@py3}
-        - {os: MacOs, py: brew@py2}
+        - {os: MacOs, py: https://raw.githubusercontent.com/Homebrew/homebrew-core/86a44a0a552c673a05f11018459c9f5faae3becc/Formula/python@2.rb}
         - {os: Ubuntu, py: 3.9-dev}
     steps:
     - name: install OS dependencies
