--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   hooks:
   - id: pyupgrade
 - repo: https://github.com/PyCQA/isort
-  rev: 5.5.2
+  rev: 5.5.3
   hooks:
   - id: isort
 - repo: https://github.com/ambv/black
@@ -35,13 +35,17 @@ repos:
   rev: v1.6.0
   hooks:
   - id: rst-backticks
+- repo: https://github.com/tox-dev/tox-ini-fmt
+  rev: "8cbca0caa1e3ea4a7606e974da3966169c375988"
+  hooks:
+  - id: tox-ini-fmt
 - repo: https://github.com/asottile/setup-cfg-fmt
   rev: v1.11.0
   hooks:
   - id: setup-cfg-fmt
     args: [--min-py3-version, "3.4"]
 - repo: https://github.com/PyCQA/flake8
-  rev: "3.8.3"
+  rev: "master"
   hooks:
   - id: flake8
     additional_dependencies: ["flake8-bugbear == 20.1.4"]
