--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,53 +35,53 @@ jobs:
         include:
           - { os: MacOs, py: brew@py3 }
     steps:
-      - name: install OS dependencies
+      - name: Install OS dependencies
         run: |
           for i in 1 2 3; do
             echo "try $i" && \
             ${{ runner.os == 'Linux' && 'sudo apt-get update -y && sudo apt-get install fish csh' || true}} && \
             ${{ runner.os == 'macOS' && 'brew update -vvv && brew install fish tcsh' || true}} && \
             ${{ runner.os == 'Windows' && ( matrix.py == '2.7' || matrix.py == 'pypy2' ) && 'choco install vcpython27 --yes -f' || true }} && \
-            exit 0;
+            exit 0 || true;
           done
           exit 1
         shell: bash
-      - name: setup python for tox
+      - name: Setup python for tox
         uses: actions/setup-python@v2
         with:
           python-version: 3.9.0-rc.2
-      - name: install tox
+      - name: Install tox
         run: python -m pip install tox
       - uses: actions/checkout@v2
-      - name: use local virtualenv for tox
+      - name: Use local virtualenv for tox
         run: python -m pip install .
-      - name: setup python for test ${{ matrix.py }}
+      - name: Setup python for test ${{ matrix.py }}
         if: "!( startsWith(matrix.py,'brew@py') || endsWith(matrix.py, '-dev') )"
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.py }}
-      - name: setup brew python for test ${{ matrix.py }}
+      - name: Setup brew python for test ${{ matrix.py }}
         if: startsWith(matrix.py,'brew@py')
         run: |
           import subprocess
           subprocess.check_call(["bash", "-c", f"brew upgrade python@3 || brew install python@3"])
           print(f"::add-path::/usr/local/opt/python@3")
         shell: python
-      - name: pick environment to run
+      - name: Pick environment to run
         run: |
           import subprocess; import json
           major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
           print('::set-env name=TOXENV::' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")))
         shell: python
-      - name: setup test suite
+      - name: Setup test suite
         run: tox -vv --notest
-      - name: run test suite
+      - name: Run test suite
         run: tox --skip-pkg-install
         env:
           PYTEST_ADDOPTS: "-vv --durations=20"
           CI_RUN: "yes"
           DIFF_AGAINST: HEAD
-      - name: rename coverage report file
+      - name: Rename coverage report file
         run: |
           import os; os.rename('.tox/coverage.{}.xml'.format(os.environ['TOXENV']), '.tox/coverage.xml')
         shell: python
@@ -111,13 +111,13 @@ jobs:
           - { os: windows, tox_env: docs }
     steps:
       - uses: actions/checkout@v2
-      - name: setup Python 3.9.0-rc.2
+      - name: Setup Python 3.9.0-rc.2
         uses: actions/setup-python@v2
         with:
           python-version: 3.9.0-rc.2
-      - name: install tox
+      - name: Install tox
         run: python -m pip install tox
-      - name: run check for ${{ matrix.tox_env }}
+      - name: Run check for ${{ matrix.tox_env }}
         run: python -m tox -e ${{ matrix.tox_env }}
         env:
           UPGRADE_ADVISORY: "yes"
@@ -127,16 +127,16 @@ jobs:
     needs: [check, test, lint]
     runs-on: ubuntu-latest
     steps:
-      - name: setup python to build package
+      - name: Setup python to build package
         uses: actions/setup-python@v2
         with:
           python-version: 3.9.0-rc.2
-      - name: install https://pypi.org/project/build
+      - name: Install https://pypi.org/project/build
         run: python -m pip install build
       - uses: actions/checkout@v2
-      - name: build package
+      - name: Build sdist and wheel
         run: python -m build -s -w . -o dist
-      - name: publish to PyPi
+      - name: Publish to PyPi
         uses: pypa/gh-action-pypi-publish@main
         with:
           skip_existing: true
