--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,15 +1,15 @@
-ignore:
-- "src/virtualenv/create/via_global_ref/builtin/python2/site.py"
-- "src/virtualenv/create/via_global_ref/_virtualenv.py"
-- "src/virtualenv/activation/python/activate_this.py"
+codecov:
+  require_ci_to_pass: yes
+  wait_for_ci: yes
 
 coverage:
+  precision: 2
+  round: down
   range: "80...100"
-  coverage:
-    status:
-      patch: false
-      changes: false
-      project:
-        default:
-          target: '80'
+
 comment: false
+
+ignore:
+  - "src/virtualenv/create/via_global_ref/builtin/python2/site.py"
+  - "src/virtualenv/create/via_global_ref/_virtualenv.py"
+  - "src/virtualenv/activation/python/activate_this.py"
