--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -137,7 +137,7 @@ jobs:
       - name: Build sdist and wheel
         run: python -m build -s -w . -o dist
       - name: Publish to PyPi
-        uses: pypa/gh-action-pypi-publish@main
+        uses: pypa/gh-action-pypi-publish@master
         with:
           skip_existing: true
           user: __token__
