--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,8 @@ extras =
 commands =
   python -m coverage erase
   python -m coverage run -m pytest \
-  --junitxml {toxworkdir}/junit.{envname}.xml \
-  {posargs:tests --int --timeout 600 -n {env:PYTEST_XDIST:auto}}
+    --junitxml {toxworkdir}/junit.{envname}.xml \
+    {posargs:tests --int --timeout 600 -n {env:PYTEST_XDIST:auto}}
   python -m coverage combine
   python -m coverage report --skip-covered --show-missing
   python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
@@ -71,6 +71,7 @@ deps =
   coverage>=5.0.1
   diff_cover>=3
 extras =
+parallel_show_output = true
 commands =
   python -m coverage combine
   python -m coverage report --skip-covered --show-missing
@@ -86,7 +87,6 @@ depends =
   py27
   pypy
   pypy3
-parallel_show_output = True
 
 [testenv:readme]
 description = check that the long description is valid (need for PyPI)
@@ -135,6 +135,7 @@ changedir = {toxinidir}/tasks
 
 [testenv:dev]
 description = generate a DEV environment
+usedevelop = true
 deps =
   setuptools_scm[toml]>=3.4
   {[testenv:release]deps}
@@ -144,7 +145,6 @@ extras =
 commands =
   python -m pip list --format=columns
   python -c 'import sys; print(sys.executable)'
-usedevelop = True
 
 [testenv:zipapp]
 description = generate a zipapp
