Make show context CLI arg, and not pass it in on python3.4, set title

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,9 @@ commands =
   python -m coverage combine
   python -m coverage report --skip-covered --show-missing
   python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
-  python -m coverage html -d {envtmpdir}/htmlcov
+  python -m coverage html -d {envtmpdir}/htmlcov \
+    !py34: --show-contexts \
+    --title virtualenv-{envname}-coverage
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 
 [testenv:fix_lint]
