--- a/setup.cfg
+++ b/setup.cfg
@@ -97,8 +97,7 @@ testing =
     pytest-randomly>=1
     pytest-timeout>=1
     pytest-xdist>=1.31.0
-    coverage>=4;python_version=="3.4"
-    coverage[toml]>=5;python_version!="3.4"
+    coverage>=4
     packaging>=20.0;python_version>"3.4"
     xonsh>=0.9.16;python_version > '3.4' and python_version != '3.9'
 
