--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ setenv =
   PYTHONIOENCODING = utf-8
   _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
   {py34,py27,pypy, upgrade}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
-  {pypy,py27}: PYTEST_XDIST = 0
+  {py34,pypy,py27}: PYTEST_XDIST = 0
 extras =
   testing
 commands =
@@ -44,7 +44,9 @@ commands =
   python -m coverage combine
   python -m coverage report --skip-covered --show-missing
   python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
-  python -m coverage html -d {envtmpdir}/htmlcov --title virtualenv-{envname}-coverage
+  python -m coverage html -d {envtmpdir}/htmlcov \
+    !py34: --show-contexts \
+    --title virtualenv-{envname}-coverage
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 
 [testenv:fix_lint]
