Restore python3.4 support (add it back to CI) (#1965)

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -33,7 +33,8 @@ jobs:
           - 2.7
           - pypy2
         include:
-          - { os: MacOs, py: brew@py3 }
+          - { os: macos, py: brew@py3 }
+          - { os: ubuntu, py: 3.4.10 }
     steps:
       - name: Install OS dependencies
         run: |
